# hfp_ag

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_hf_msg_set.c  app_hf_msg_set.h  app_nv.c  app_nv.h  app_opus_codec.c  app_opus_codec.h  app_sr.c  app_sr.h  app_status_led.c  app_status_led.h  bt_app_core.c  bt_app_hf.c  bt_app_ws.c  bt_app_ws.h  bt_wifi_info.h  gpio_pcm_config.h  idf_component.yml  main.c
